# contaclass

./: .gitignore  ContaClass_PRD_v1.0.md  README.md  pyproject.toml
docs/: arquitetura-contaclass.md  guiadeusagem-fase1.md
src/contaclass/: __main__.py  cli.py
src/contaclass/core/: classifier.py  exact_match.py  fuzzy_match.py  normalizer.py  score.py
src/contaclass/io/: excel_reader.py  excel_writer.py
src/contaclass/models/: entry.py  result.py
tests/: test_classifier.py  test_cli.py  test_exact_match.py  test_excel_reader.py  test_excel_writer.py  test_fuzzy_match.py  test_normalizer.py  test_score.py
