[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contaclass"
version = "0.1.0"
description = "Classificação contábil inteligente, do histórico ao lançamento em segundos."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "ContaClass Team"},
]

dependencies = [
    "click>=8.1",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
    "Unidecode>=1.3",
]

[project.scripts]
contaclass = "contaclass.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["contaclass*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["contaclass"]
